# dmsdk

./: .defignore  .gitignore  Cargo.toml  README.md  cbindgen.toml  hooks.editor_script  rustc.sh
dmsdk/: Cargo.toml  README.md
dmsdk/src/: dmconfigfile.rs  dmengine.rs  dmextension.rs  dmgameobject.rs  dmhash.rs  dmhid.rs  dmjson.rs  dmlog.rs  dmresource.rs  dmscript.rs  dmtime.rs  dmvmath.rs  dmwebserver.rs  lib.rs  lua.rs
dmsdk/src/dmgameobject/: component.rs  gameobject.rs  mod.rs
dmsdk_ffi/: Cargo.toml  build.rs  fetch_headers.py  generate_bindings.sh  sdk.h
dmsdk_ffi/dmsdk/: sdk.h
dmsdk_ffi/dmsdk/dlib/: dalloca.h
dmsdk_ffi/src/: bindings-x86_64-unknown-linux-gnu.rs  lib.rs
example/: game.project  hooks.editor_script  rustc.sh
example/extension/: Cargo.toml  ext.manifest
example/extension/src/: Cargo.toml  extension.cpp
example/extension/src/.cargo/: config.toml
example/extension/src/src/: config_extension.rs  custom_component.rs  lib.rs
example/main/: main.script
extension/rust/: Cargo.toml
extension/rust/dmsdk/src/: dmconfigfile.rs  dmengine.rs  dmextension.rs  dmgameobject.rs  dmresource.rs  dmscript.rs  dmwebserver.rs  lib.rs  lua.rs
extension/rust/dmsdk_ffi/dmsdk/: resource_private.h  sdk.h
extension/rust/dmsdk_ffi/dmsdk/resource/: resource.h
extension/rust/dmsdk_ffi/dmsdk/vectormath/cpp/: vectormath_aos.h
extension/rust/extension/: Cargo.toml
extension/rust/extension/src/: lib.rs
extension/src/: extension.cpp
